cluster/core/networking/traefik/healthcheck/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: networking
spec:
  entryPoints:
    - traefik
  routes:
    - match: Host(`${SECRET_DOMAIN}`) && Path(`/healthz`)
      kind: Rule
      priority: 10
      services:
        - name: ping@internal
          kind: TraefikService
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
